fix: remove title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="chart"></div>
-    <div id="question"><h1>Wheel of Dental</h1></div>
+    <div id="question"><h1></h1></div>
 </html>
     
     
