fix: move d3 local

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Wheel of Dental</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="d3.v3.min.js" charset="utf-8"></script>
     <script src="script.js"></script>
 </head>
 <body>
