--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Wheel of Dental</title>
     <link rel="stylesheet" href="style.css">
-    
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <script src="script.js"></script>
 </head>
 <body>
