--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     
 </head>
 <body>
+    <div style="padding-top: 70vh"><h1>Number of Tables</h1>
+        <input id="numberOfTables" placeholder="Number of Tables">
+        <div><button onclick="setTableCount()">Set</button></div><hr />
+        <button  onclick="resetWheel()">Reset Wheel</button></div>
+    
     <div id="chart"></div>
     <div id="question"><h1></h1></div>
     <script src="d3.v3.min.js" charset="utf-8"></script>
