fix: update site with basic controls

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     
 </head>
 <body>
-    <div style="padding-top: 70vh"><h1>Number of Tables</h1>
+    <div id="controls" style="padding-top: 70vh"><h2>Number of Tables</h2>
         <input id="numberOfTables" placeholder="Number of Tables">
-        <div><button onclick="setTableCount()">Set</button></div><hr />
-        <button  onclick="resetWheel()">Reset Wheel</button></div>
+        <div><button onclick="setTableCount()">Set</button></div>
+        <hr />
+        <button  onclick="resetWheel()">Reset Wheel</button>
+    </div>
     
     <div id="chart"></div>
     <div id="question"><h1></h1></div>
